# llm-ca-evaluation

./: .gitignore  ENV_FILE_TEMPLATE  README.md  pyproject.toml
data/output/: 1.json  2.json  2_qa.json  3.json  4.json  langchain_results.json
data/output/metrics/: evaluation_results2024-01-17T16:40:32.506993.json  evaluation_results2024-01-18T11:18:37.907281.json
data/output/new_questions/: 2024-01-18T09:54:55.703694.json  2024-01-18T09:55:04.974795.csv  2024-01-18T11:08:11.642148.json  2024-01-18T11:08:19.269804.csv
data/output/qa_answers/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  4.json  5.json  6.json  7.json  8.json  9.json
data/output/test/: 1.json  1_qa.json  2.json  3_qa.json
data/output/variations/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  4.json  5.json  6.json  7.json  8.json  9.json
data/prompts/: automated_evaluation.json
src/: constants.py
src/evaluation/: app.py  csv_handler.py  lc_automated_evaluator.py  llm_client.py  main.py  openai_client.py  qa_client.py  vertical_list_output_parser.py
src/evaluation/types/: example.py  result.py
src/evaluation/utility/: csv_handler.py  json_handler.py  (+1 more)
tests/: test_api_client.py  test_csv_handler.py
